--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical"
     android:padding="20dp"
     android:gravity="center"
-    tools:context=".MainActivity">
+    tools:context=".Signup">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -28,7 +28,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/futo_logo"
-            android:text="Login"
+            android:text="Signup"
             android:textSize="32sp"
             android:layout_centerHorizontal="true"
             android:textStyle="normal"
@@ -46,11 +46,11 @@
             android:paddingStart="20dp"
             android:textSize="14sp"
             android:fontFamily="sans-serif-medium"
-            android:hint="e-mail">
+            android:hint="Name">
         </EditText>
 
         <EditText
-            android:id="@+id/password_input"
+            android:id="@+id/email_input"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_below="@id/name_input"
@@ -58,29 +58,51 @@
             android:paddingStart="20dp"
             android:textSize="14sp"
             android:fontFamily="sans-serif-medium"
+            android:hint="email">
+        </EditText>
+
+        <EditText
+            android:id="@+id/c_email_input"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_below="@id/email_input"
+            android:layout_marginTop="16dp"
+            android:paddingStart="20dp"
+            android:textSize="14sp"
+            android:fontFamily="sans-serif-medium"
+            android:hint="confirm e-mail">
+        </EditText>
+
+        <EditText
+            android:id="@+id/password_input"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_below="@id/c_email_input"
+            android:layout_marginTop="16dp"
+            android:paddingStart="20dp"
+            android:textSize="14sp"
+            android:fontFamily="sans-serif-medium"
             android:hint="password">
         </EditText>
 
-        <TextView
-            android:id="@+id/forgot_password"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/password_input"
-            android:text="Forgot Password"
-            android:textSize="16sp"
-            android:layout_alignParentRight="true"
-            android:textStyle="bold"
+        <EditText
+            android:id="@+id/c_password_input"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_below="@id/password_input"
+            android:layout_marginTop="16dp"
+            android:paddingStart="20dp"
+            android:textSize="14sp"
             android:fontFamily="sans-serif-medium"
-            android:textColor="#171D29"
-            android:layout_marginTop="16dp">
-        </TextView>
+            android:hint="confirm password">
+        </EditText>
 
         <Button
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:id="@+id/login_button"
-            android:layout_below="@id/forgot_password"
-            android:text="Login"
+            android:id="@+id/signup_button"
+            android:layout_below="@id/c_password_input"
+            android:text="Signup"
             android:layout_marginTop="25dp"
             android:textStyle="bold"
             android:fontFamily="sans-serif-medium"
@@ -92,14 +114,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:layout_below="@+id/login_button"
+            android:layout_below="@+id/signup_button"
             android:orientation="horizontal"
             android:layout_marginTop="25dp">
             <TextView
                 android:id="@+id/dont_have_account"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Don't have an account?"
+                android:text="Already have an account?"
                 android:textSize="16sp"
                 android:textStyle="normal"
                 android:fontFamily="sans-serif-medium"
@@ -121,5 +143,4 @@
 
 
     </RelativeLayout>
-
 </LinearLayout>
