--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
         </ImageView>
 
         <TextView
-            android:id="@+id/signup_text"
+            android:id="@+id/login_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/futo_logo"
@@ -38,22 +38,21 @@
         </TextView>
 
         <EditText
-            android:id="@+id/name_input"
+            android:id="@+id/email_input"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:layout_below="@id/signup_text"
+            android:layout_below="@id/login_text"
             android:layout_marginTop="25dp"
-            android:paddingStart="20dp"
-            android:textSize="14sp"
             android:fontFamily="sans-serif-medium"
-            android:hint="e-mail">
-        </EditText>
+            android:hint="e-mail"
+            android:paddingStart="20dp"
+            android:textSize="14sp"></EditText>
 
         <EditText
             android:id="@+id/password_input"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:layout_below="@id/name_input"
+            android:layout_below="@id/email_input"
             android:layout_marginTop="16dp"
             android:paddingStart="20dp"
             android:textSize="14sp"
