--- a/app/src/main/res/drawable/outlined_shape.xml
+++ b/app/src/main/res/drawable/outlined_shape.xml
@@ -1,4 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <shape xmlns:android="http://schemas.android.com/apk/res/android">
+        <solid android:color="@android:color/transparent" />
+        <stroke
+            android:width="1dp"
+            android:color="#2B943F" /> <!-- Border color -->
+        <corners android:radius="10dp" /> <!-- Corner radius -->
+        <padding
+            android:left="8dp"
+            android:top="8dp"
+            android:right="8dp"
+            android:bottom="8dp" />
+    </shape>
 
-</selector>
