--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -7,11 +7,90 @@
     android:layout_height="match_parent"
     tools:context=".Dashboard">
 
-    <org.osmdroid.views.MapView
-        android:id="@+id/mapView"
+<!--search bar-->
+    <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:layout_alignParentTop="true"
+        android:id="@+id/search_bar_container">
 
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/search_bar"
+            android:hint="Search here"
+            android:drawableStart="@drawable/search"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp" />
+    </com.google.android.material.textfield.TextInputLayout>
 
+<!--filters -->
+    <com.google.android.material.chip.ChipGroup
+        android:id="@+id/chip_group"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_below="@+id/search_bar_container"
+        app:singleSelection="true">
+
+        <com.google.android.material.chip.Chip
+            android:id="@+id/chip_all"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="All"/>
+        <com.google.android.material.chip.Chip
+            android:id="@+id/chip_building"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Building"/>
+        <com.google.android.material.chip.Chip
+            android:id="@+id/chip_facilty"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Facility"/>
+        <com.google.android.material.chip.Chip
+            android:id="@+id/chip_food"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Food"/>
+        <com.google.android.material.chip.Chip
+            android:id="@+id/chip_bank"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Bank"/>
+    </com.google.android.material.chip.ChipGroup>
+
+<!--Map view-->
+    <org.osmdroid.views.MapView
+        android:id="@+id/map_view"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_below="@id/chip_group"
+        android:layout_above="@id/bottom_navigation"
+        android:layout_marginTop="8dp" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/navigate"
+        android:layout_above="@id/bottom_navigation"
+        android:layout_alignParentEnd="true"
+        android:id="@+id/fab_navigate"
+        android:layout_marginBottom="32dp"
+        android:layout_marginEnd="16dp"/>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        app:menu="@menu/bottom_nav_menu"
+        app:labelVisibilityMode="labeled"
+        app:itemIconTint="@color/selector_bottom_nav_color"
+        app:itemTextColor="@color/selector_bottom_nav_color"
+        app:itemBackground="@drawable/selector_nav_background"/>
 
 </RelativeLayout>
