--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -75,6 +75,16 @@
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:src="@drawable/current_location"
+        android:layout_above="@id/fab_navigate"
+        android:layout_alignParentEnd="true"
+        android:id="@+id/fab_locate"
+        android:layout_marginBottom="32dp"
+        android:layout_marginEnd="16dp"/>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:src="@drawable/navigate"
         android:layout_above="@id/bottom_navigation"
         android:layout_alignParentEnd="true"
