--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -51,7 +51,7 @@
             android:hint="Name" />
 
         <EditText
-            android:id="@+id/email_input"
+            android:id="@+id/login_email_input"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_below="@id/name_input"
@@ -67,7 +67,7 @@
             android:id="@+id/c_email_input"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:layout_below="@id/email_input"
+            android:layout_below="@id/login_email_input"
             android:inputType="textEmailAddress"
             android:background="@drawable/outlined_shape"
             android:layout_marginTop="16dp"
@@ -77,7 +77,7 @@
             android:hint="confirm e-mail" />
 
         <EditText
-            android:id="@+id/password_input"
+            android:id="@+id/login_password_input"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_below="@id/c_email_input"
@@ -93,7 +93,7 @@
             android:id="@+id/c_password_input"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:layout_below="@id/password_input"
+            android:layout_below="@id/login_password_input"
             android:background="@drawable/outlined_shape"
             android:layout_marginTop="16dp"
             android:inputType="textPassword"
@@ -133,7 +133,7 @@
                 android:textColor="#171D29">
             </TextView>
             <TextView
-                android:id="@+id/Signup"
+                android:id="@+id/Signup_text_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
