--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -50,7 +50,7 @@
             android:hint="Name" />
 
         <EditText
-            android:id="@+id/login_email_input"
+            android:id="@+id/signup_email_input"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_below="@id/name_input"
@@ -66,7 +66,7 @@
             android:id="@+id/c_email_input"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:layout_below="@id/login_email_input"
+            android:layout_below="@id/signup_email_input"
             android:inputType="textEmailAddress"
             android:background="@drawable/outlined_shape"
             android:layout_marginTop="16dp"
@@ -76,10 +76,23 @@
             android:hint="confirm e-mail" />
 
         <EditText
-            android:id="@+id/login_password_input"
+            android:id="@+id/phone"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_below="@id/c_email_input"
+            android:inputType="phone"
+            android:background="@drawable/outlined_shape"
+            android:layout_marginTop="16dp"
+            android:paddingStart="20dp"
+            android:textSize="14sp"
+            android:fontFamily="sans-serif-medium"
+            android:hint="Phone number" />
+
+        <EditText
+            android:id="@+id/signup_password_input"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_below="@id/phone"
             android:layout_marginTop="16dp"
             android:background="@drawable/outlined_shape"
             android:inputType="textPassword"
@@ -92,7 +105,7 @@
             android:id="@+id/c_password_input"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:layout_below="@id/login_password_input"
+            android:layout_below="@id/signup_password_input"
             android:background="@drawable/outlined_shape"
             android:layout_marginTop="16dp"
             android:inputType="textPassword"
@@ -132,11 +145,11 @@
                 android:textColor="#171D29">
             </TextView>
             <TextView
-                android:id="@+id/Signup_text_button"
+                android:id="@+id/Login_text_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
-                android:text="Signup"
+                android:text="Login"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:fontFamily="sans-serif-medium"
