--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -7,4 +7,8 @@
             <certificates src="@raw/my_cert" /> <!-- If applicable -->
         </trust-anchors>
     </domain-config>
+
+    <domain-config cleartextTrafficPermitted="true">
+        <domain includeSubdomains="true">192.168.0.106</domain>
+    </domain-config>
 </network-security-config>
