--- a/app/src/main/res/layout/landmark_list_item.xml
+++ b/app/src/main/res/layout/landmark_list_item.xml
@@ -1,6 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_weight="@integer/material_motion_duration_long_1"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/listLandmarkName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Add Event"
+                android:textSize="18sp"
+                android:gravity="left"
+                android:textStyle="bold"
+                android:fontFamily="sans-serif-medium"
+                android:textColor="#171D29" />
+
+            <TextView
+                android:id="@+id/listLandmarkdescription"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Add Event"
+                android:textSize="14sp"
+                android:gravity="left"
+                android:textStyle="normal"
+                android:fontFamily="sans-serif-medium"
+                android:textColor="#171D29" />
+
+        </LinearLayout>
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/mdi_location"
+            android:padding="10dp"
+            android:id="@+id/listSearchButton"
+            style="@style/Widget.Material3.MaterialTimePicker.ImageButton"
+            android:backgroundTint="#CAE4CF"/>
+    </LinearLayout>
+</LinearLayout>
