--- a/app/src/main/res/layout/fragment_landmark.xml
+++ b/app/src/main/res/layout/fragment_landmark.xml
@@ -11,7 +11,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:layout_marginTop="50dp"
-        android:background="@color/white">
+        android:background="#FFFFFF">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -42,8 +42,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:clipToPadding="false"
+            android:layout_weight="1"
             android:padding="16dp"
-            tools:listitem=""  />
+            tools:listitem="@layout/landmark_list_item"  />
 
 
 
