fix event bug and UI

--- a/app/src/main/res/layout/event_list_item.xml
+++ b/app/src/main/res/layout/event_list_item.xml
@@ -57,8 +57,7 @@
             android:layout_height="50dp"
             android:src="@drawable/navigate"
             android:id="@+id/listNavigateButton"
-            style="@style/Widget.Material3.MaterialTimePicker.ImageButton"
-            android:backgroundTint="#CAE4CF"/>
+            android:backgroundTint="@android:color/transparent"/>
     </LinearLayout>
 
 
